# aiDesk

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/api/: README.md  alembic.ini  package.json  pyproject.toml  test_t4_memory.py  test_t7_verify.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260419_0001_bootstrap.py  20260419_0002_runtime_backbone.py  20260419_0003_memory_governance.py  20260419_0003_security_hardening.py  20260419_0003a_security_hardening.py  20260419_0004_memory_governance.py  20260419_0004_review_durability.py  20260419_0005_review_durability.py  20260423_0005_notification_deliveries.py  20260423_0006_notification_deliveries.py
apps/api/api/: app.py  config.py  contracts.py  database.py  errors.py  models.py  runtime_contracts.py
apps/api/api/agent_runtime/: models.py  service.py
apps/api/api/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/api/context/: __init__.py  assembly.py  dto.py  query.py  router.py  service.py
apps/api/api/control_plane/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/api/domain/: __init__.py
apps/api/api/events/: builder.py  models.py  store.py
apps/api/api/executors/: base.py  contracts.py  dependencies.py  openhands_runtime.py  provider_contracts.py  registry.py  router.py  service.py  transports.py
apps/api/api/generated_contracts/: __init__.py  openapi_models.py
apps/api/api/health/: router.py
apps/api/api/integrations/: __init__.py  langgraph.py  mem0.py  notifications.py  openhands.py  openviking.py
apps/api/api/kernel/: __init__.py
apps/api/api/memory/: __init__.py  governance.py  mem0.py  (+5 more)
apps/api/tests/: _t2_smoke.py  conftest.py  helpers.py  run_existing_security_tests.py  run_migration_check.py  run_security_tests.py  run_t6_verify.py  runner.py  temporal_helpers.py  test_be3.py  test_config_feishu_aliases.py  test_ecc_contracts.py  test_executor_provider_artifacts.py  test_global_optimizations.py  test_langgraph_integration.py  test_llm_agent_abstraction.py  test_mem0_memory_backbone.py  test_memory_supersede_conflict.py  test_migrations.py  test_notification_feishu.py  test_notification_mcp_bridge.py  test_notification_persistence.py  test_notification_product_surfaces.py  test_openapi_snapshot.py  test_policy_observability.py  test_project_audit_mode.py  test_project_improvement_modes.py  test_projects_api.py  test_runtime_dispatch_activity_cancellation.py  test_runtime_lane.py  test_security_hardening.py  test_t2_runtime_durable_semantics.py  test_t3_context_recall.py  test_t7_observability.py  test_temporal_runtime_approval.py  test_workflow_failure_status_handling.py  test_workflow_notification_metadata.py  test_workflow_task_graph_and_retry.py  verify_t1_durability.py
apps/worker/: Dockerfile  README.md  package.json  pyproject.toml
apps/worker/ai_desk_worker/: __init__.py  runtime.py
(+264 files in other folders)
