[project]
name = "ai-desk-worker"
version = "0.1.0"
description = "Dedicated Temporal runtime worker for AI Desk"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ai-desk-api",
]

[tool.uv.sources]
ai-desk-api = { path = "../api", editable = true }

[dependency-groups]
dev = [
  "pyright>=1.1.406,<2",
  "ruff>=0.14.0,<0.15",
]

[tool.pyright]
include = ["ai_desk_worker"]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "A", "C4", "SIM"]

[tool.hatch.build.targets.wheel]
packages = ["ai_desk_worker"]

[tool.hatch.build.targets.sdist]
include = ["ai_desk_worker", "README.md"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
